--- a/research.Rmd
+++ b/research.Rmd
@@ -14,7 +14,7 @@ Links: [Google Scholar](https://scholar.google.com/citations?user=dFdQTmYAAAAJ),
 
 ## Peer-reviewed Papers
 
-**June Choe**, and Anna Papafragou. (Accepted). The acquisition of subordinate nouns as pragmatic inference. _Journal of Memory and Language_. [OSF](https://osf.io/x8cuf/?view_only=14a975d3618e4838b6cc7681b2ecf692)
+**June Choe**, and Anna Papafragou. (2023). The acquisition of subordinate nouns as pragmatwarniic inference. _Journal of Memory and Language, 132_, 104432. DOI: https://doi.org/10.1016/j.jml.2023.104432. [PDF](https://www.langcoglab.com/_files/ugd/7cb05b_746c6f11a2214857a94c3ebbc7afa718.pdf) [OSF](https://osf.io/x8cuf/?view_only=14a975d3618e4838b6cc7681b2ecf692)
 
 **June Choe**, Yiran Chen, May Pik Yu Chan, Aini Li, Xin Gao, and Nicole Holliday. (2022). [Language-specific Effects on Automatic Speech Recognition Errors for World Englishes](https://aclanthology.org/2022.coling-1.628/). In _Proceedings of the 29th International Conference on Computational Linguistics_, 7177–7186.
 
@@ -74,13 +74,17 @@ _Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Win
 
 Massimo Aria, Trang Le, Corrado Cuccurullo, Alessandra Belfiore, and **June Choe**. (Submitted). openalexR: An R-tool for collecting bibliometric data from OpenAlex. [Github](https://github.com/massimoaria/openalexR)
 
+**June Choe**. (2023). jlmerclusterperm: Cluster-Based Permutation Analysis for Densely Sampled Time Data (Version 1.0.0) [Computer Software]. [Github](https://yjunechoe.github.io/jlmerclusterperm/)
+
 **June Choe**. (2022). Sub-layer modularity in the Grammar of Graphics. American Statistical Association (ASA) student paper award in Statistical Computing and Graphics. [Paper](static/papers/Choe_2022_SublayerGG.pdf), [Github](https://github.com/yjunechoe/ggtrace/)
 
-Sean McWeeny, **June Choe**, & Elizabeth S. Norton. (2021). SnowGlobe: An Iterative Search Tool for Systematic Reviews and Meta-Analyses. [Computer Software]. [OSF](https://doi.org/10.17605/OSF.IO/U25RN)
+Sean McWeeny, **June Choe**, & Elizabeth S. Norton. (2021). SnowGlobe: An Iterative Search Tool for Systematic Reviews and Meta-Analyses [Computer Software]. [OSF](https://doi.org/10.17605/OSF.IO/U25RN)
 
 ### Talks
 
 June Choe. [Sub-layer modularity in the Grammar of Graphics](https://ww2.aievolution.com/JSMAnnual/index.cfm?do=ev.viewEv&ev=2860). Talk at the 2023 Joint Statistical Meetings, 5-10 August 2023. Toronto, Canada.
+
+June Choe. Fast cluster-based permutation test using mixed-effects models. Talk at the Integrated Language Science and Technology (ILST) seminar, 21 April 2023. University of Pennsylvania, PA.
 
 June Choe. [Cracking open ggplot internals with {ggtrace}](https://www.youtube.com/watch?v=dUBnitXf5mk&list=PL9HYL-VRX0oTOwqzVtL_q5T8MNrzn0mdH&index=38). Talk at the 2022 RStudio Conference, 25-28 July 2022. Washington D.C. [https://github.com/yjunechoe/ggtrace-rstudioconf2022](https://github.com/yjunechoe/ggtrace-rstudioconf2022)
 
