--- a/research.Rmd
+++ b/research.Rmd
@@ -68,13 +68,18 @@ _Experimental syntax using IBEX/PCIBEX_ with Dr. Nayoun Kim. Workshop at the 202
 _Experimental syntax using IBEX: a walkthrough_ with Dr. Nayoun Kim. 2021 BK Winter School-Workshop on Experimental Linguistics/Syntax at Sungkyunkwan University, 19-22 January 2021. Seoul, South Korea. [PDF](https://github.com/yjunechoe/IBEX-Workshop-Materials/blob/master/2021-ibex-workshop-slides.pdf)
 
 
+## Guest lectures
+
+_Simulation-based power analysis for mixed-effects models_ for LING 5620 ("Quantitative Study of Linguistic Variation"), Spring 2023.
+
+
 ## Research activities in FOSS
 
 ### Software
 
 Massimo Aria, Trang Le, Corrado Cuccurullo, Alessandra Belfiore, and **June Choe**. (Submitted). openalexR: An R-tool for collecting bibliometric data from OpenAlex. [Github](https://github.com/massimoaria/openalexR)
 
-**June Choe**. (2023). jlmerclusterperm: Cluster-Based Permutation Analysis for Densely Sampled Time Data (Version 1.0.0) [Computer Software]. [Github](https://yjunechoe.github.io/jlmerclusterperm/)
+**June Choe**. (2023). jlmerclusterperm: Cluster-Based Permutation Analysis for Densely Sampled Time Data. R package version 1.0.0. https://cran.r-project.org/package=jlmerclusterperm. [Github](https://github.com/yjunechoe/jlmerclusterperm/)
 
 **June Choe**. (2022). Sub-layer modularity in the Grammar of Graphics. American Statistical Association (ASA) student paper award in Statistical Computing and Graphics. [Paper](static/papers/Choe_2022_SublayerGG.pdf), [Github](https://github.com/yjunechoe/ggtrace/)
 
